--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -38,7 +38,7 @@
                             <img class="form_img" src="./assets/images/car-repair.svg" alt="email">
                         </div>
                         <select name="model" id="model-none" class="form_choice" onchange="choiceModel()">
-                            <option value="">Select the model of car
+                            <option value="0">Select the model of car
                             </option>
                         </select>
                         <select name="model" id="model-mazda" class="form_choice" onchange="choiceModel()">
