--- a/ex-3/index.html
+++ b/ex-3/index.html
@@ -14,23 +14,21 @@
         <form class="form">
             <h2 class="form_heading">LEAVE A COMMENT</h2>
             <div class="form_div">
-                <input class="form_input name" type="text" name="name" placeholder="Your name" />
+                <input class="form_div_input form_div_input_name" type="text" name="name" placeholder="Your name" />
             </div>
             <div class="form_div">
-                <input class="form_input form_img" id="img" type="file" name="photo" accept=".jpg,.jpeg,.png" />
+                <input class="form_div_input form_div_input_img" id="img" type="file" name="photo" accept=".jpg,.jpeg,.png" />
             </div>
             <div class="form_div">
-                <input class="form_input theme" type="text" name="theme" placeholder="Theme" />
+                <input class="form_div_input form_div_input_theme" type="text" name="theme" placeholder="Theme" />
             </div>
             <div class="form_div">
-                <textarea class="form_input form_text" type="text" placeholder="Your comment"></textarea>
+                <textarea class="form_div_input form_div_input_text" type="text" placeholder="Your comment"></textarea>
             </div>
             <div class="form_div">
-                <input class="form_btn" type="submit" value="Send" />
+                <input class="form_div_btn" type="submit" value="Send" />
             </div>
         </form>
-        <div class="overlay" data-close=""></div>
-
     </main>
 </body>
 </html>
