--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -10,6 +10,27 @@
     <title>EX1</title>
 </head>
 <body>
-    
+    <form class="form">
+        <h1 class="form_heading">Расчет зарплаты сотрудника</h1>
+        <div class="form_name">
+            <label for="name" class="form_name_label">Введите имя сотрудника</label>
+            <input type="text" class="form_name_input" id="name" placeholder="Имя сотрудника">
+        </div>
+        <div class="form_surname">
+            <label for="surname" class="form_surname_label">Введите фамилию сотрудника</label>
+            <input type="text" class="form_surname_input" id="surname" placeholder="Фамилия сотрудника">
+        </div>
+        <div class="form_rate">
+            <label for="rate" class="form_rate_label">Введите зарплатную ставку сотрудника</label>
+            <input type="number" class="form_rate_input" id="rate" placeholder="Ставка сотрудника">
+        </div>
+        <div class="form_days">
+            <label for="days" class="form_days_label">Введите количество отработанных дней сотрудника</label>
+            <input type="number" class="form_days_input" id="days" placeholder="Количество отработанных дней">
+        </div>
+        <button class="form_btn">
+            Рассчитать зарплату
+        </button>
+    </form>
 </body>
 </html>
