--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="field">
                 <label for="email">Ваш e-mail:</label> <br />
-                <input type="email" name="email" class="input" id="email" placeholder="E-Mail"/>
+                <input type="email" name="email" class="input" id="email" placeholder="E-Mail" required/>
             </div>
             <div class="field_diet">
                 <label for="breed">Порода Вашего питомца:</label><br />
