--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
-    <script src="./scripts/index.js" defer></script>
+    <script src="./assets/scripts/index.js" defer></script>
     <title>EX1</title>
 </head>
 <body>
