--- a/ex-1/src/index.html
+++ b/ex-1/src/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 @@include('components/page-blocks/_head.html',{
 "lang":"ru",
-"title":"Поиск gif",
-"description":"Study project",
-"keywords":"",
-"favicon":"img/favicons/favicon",
+"title":"Поиск gif"
 })
 
 <body>
