--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -11,8 +11,93 @@
     <title>Bootstrap</title>
 </head>
 <body>
+
+    <header class="header">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-end navbar-nav__menu">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
+                  </li><li class="nav-item">
+                    <a class="nav-link" href="#">Contacts</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
     
-    <
+    <main>
+        <div class="welcome container alert-secondary">
+            <div class="hero-unit">
+                <h1 class="welcome__title">A Warm Welcome!</h1>
+                <p class="welcome__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero ipsa ea expedita. Officiis quaerat ipsam, obcaecati fuga itaque harum officia assumenda recusandae dignissimos enim voluptatem exercitationem ratione eius voluptates deserunt.</p>
+                <p class="welcome__button">
+                  <a class="btn btn-primary btn-large">
+                    Call to action!
+                  </a>
+                </p>
+            </div>
+        </div>
+
+        <div class="card-container">
+            <div class="card text-center" style="width: 18rem;">
+                <img src="./assets/images/image.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti modi harum tempore aut ipsam.</p>
+                </div>
+                <div class="card-footer text-muted">
+                    <a href="#" class="btn btn-primary">Find Out More!</a>
+                </div>
+            </div>
+            <div class="card text-center" style="width: 18rem;">
+                <img src="./assets/images/image.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti modi harum tempore aut ipsam.</p>
+                </div>
+                <div class="card-footer text-muted">
+                    <a href="#" class="btn btn-primary">Find Out More!</a>
+                </div>
+            </div> 
+            <div class="card text-center" style="width: 18rem;">
+                <img src="./assets/images/image.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti modi harum tempore aut ipsam.</p>
+                </div>
+                <div class="card-footer text-muted">
+                    <a href="#" class="btn btn-primary">Find Out More!</a>
+                </div>
+            </div> 
+            <div class="card text-center" style="width: 18rem;">
+                <img src="./assets/images/image.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti modi harum tempore aut ipsam.</p>
+                  </div>
+                  <div class="card-footer text-muted">
+                    <a href="#" class="btn btn-primary">Find Out More!</a>
+                  </div>
+            </div> 
+        </div>
+    </main>
+
+    <footer class="footer navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="copyright">Copyright Your Website 2019</div>
+    </footer>
     
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
