fixed html. validation ok

--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -19,12 +19,12 @@
                     </div>
                     <h2 class="header__title"><a href="#" class="header__link">Виарушка</a></h2>
                 </article>
-                <button class="header__btn btn btn-primary">
+                <div class="header__btn btn btn-primary">
                     <p class="btn__text">Корзина</p>
                     <div class="btn__img-container img-container">
                         <img src="./assets/images/icons/basket.svg" alt="Корзина" class="img-container__icon">
                     </div>
-                </button>
+                </div>
         </header>
     
         <main class="container-fluid ">
@@ -32,23 +32,24 @@
             <section class="container__offer offer card" id="offer" role="tabpanel" aria-labelledby="opportunities-tab">
                 <h1 class="offer__title card-title">Виртуальная реальность без проводов</h1>
                 <p class="offer__text card-text">Лучшее, что случалось с виртуальным миром в реальности. Новый компактный шлем без проводов и дорогих компьютеров</p>
-                <button href="#" class="offer__btn btn btn-primary purple-btn">
+                <div class="offer__btn btn btn-primary purple-btn">
                     <p class="btn__text">Купить</p>
                     <div class="btn__img-container">
                         <img src="./assets/images/icons/card.svg" alt=" Купить" class="btn__icon">
                     </div>
-                </button>    
+                </div>    
             </section>
     
             <section class="container__opportunities opportunities" id="opportunities" role="tabpanel" aria-labelledby="opportunities-tab">
                 <h2 class="opportunities__title_big">Возможности</h2>
                 <article class="row row-cols-3 justify-content-center g-5 opportunities__body">
+                    <h3 class="hidden">Подробное описание возможностей VR-шлема</h3>
                     <article class="col opportunities__description">
                         <div class="opportunities__img-container">
                             <img src="./assets/images/image_1-min.png" alt="Без проводов" class="opportunities__image"> 
                         </div>
                         <h3 class="opportunities__title_medium">Без проводов</h3>
-                        <p class="opportunities__text">Шлем работает без проводов. <br> Не нужен ни компьютер, <br> ни внешнее питание, ни большое помещение, чтобы расставить трекеры.</br>
+                        <p class="opportunities__text">Шлем работает без проводов. <br> Не нужен ни компьютер, <br> ни внешнее питание, ни большое помещение, чтобы расставить трекеры.</p>>
                     </article>
                     <article class="col opportunities__description">
                         <div class="opportunities__img-container">
@@ -73,10 +74,11 @@
                         <p class="opportunities__text">По сравнению с другими VR-шлемами наш стоит гораздо меньше. И вы существенно экономите на мощном компьютере.</p>
                     </article>
                     <article class="col opportunities__subscribe">
+                        <h3 class="hidden">Подписаться на новости портала</h3>
                         <form class="opportunities__form">
                             <div class="mb-3">
                                 <label for="exampleInputEmail1" class="form-label opportunities__title_medium opportunities__title_white">Новости</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Эл. почта">
+                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Эл. почта">
                             </div>
                             <button type="submit" class="btn btn-primary">Подписаться</button>
                         </form>
@@ -87,6 +89,7 @@
             <section class="container__opportunities opportunities" id="delivery" role="tabpanel" aria-labelledby="opportunities-tab">
                 <h2 class="opportunities__title_big">Доставка</h2>
                 <article class="row row-cols-3 justify-content-center g-5 opportunities__body">
+                    <h3 class="hidden">Доставка VR-шлема Виарушка</h3>
                     <p class="opportunities__text develop">
                         Раздел в разработке
                     </p>
@@ -96,6 +99,7 @@
             <section class="container__opportunities opportunities" id="help" role="tabpanel" aria-labelledby="opportunities-tab">
                 <h2 class="opportunities__title_big">Помощь</h2>
                 <article class="row row-cols-3 justify-content-center g-5 opportunities__body">
+                    <h3 class="hidden">Помощь с VR-шлемом Виарушка</h3>
                     <p class="opportunities__text develop">
                         Раздел в разработке
                     </p>
