delete '>' and fix margin in component ' opportunities'

--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -49,7 +49,7 @@
                             <img src="./assets/images/image_1-min.png" alt="Без проводов" class="opportunities__image"> 
                         </div>
                         <h3 class="opportunities__title_medium">Без проводов</h3>
-                        <p class="opportunities__text">Шлем работает без проводов. <br> Не нужен ни компьютер, <br> ни внешнее питание, ни большое помещение, чтобы расставить трекеры.</p>>
+                        <p class="opportunities__text">Шлем работает без проводов. <br> Не нужен ни компьютер, <br> ни внешнее питание, ни большое помещение, чтобы расставить трекеры.</p>
                     </article>
                     <article class="col opportunities__description">
                         <div class="opportunities__img-container">
